# guard

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.data-plane  Dockerfile.management-plane  Dockerfile.mcp-server  LICENSE  Makefile  README.md  SECURITY.md  cleanup-deprecated.sh  deployment-guide.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vocabulary.yaml
console/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data_plane/: README.md
data_plane/tupl_dp/rule_engine/: Cargo.toml  README.md
data_plane/tupl_dp/rule_engine/examples/: action_clause_usage.rs  audit_record_usage.rs  bundle_crud_usage.rs  execution_constraints_usage.rs  hot_reload_usage.rs  match_clause_usage.rs  rule_bundle_usage.rs  rule_metadata_usage.rs  rule_table_usage.rs
data_plane/tupl_dp/rule_engine/src/: ACTION_CLAUSE_README.md  AUDIT_RECORD_README.md  BUNDLE_CRUD.md  EXECUTION_CONSTRAINTS.md  HOT_RELOAD.md  MATCH_CLAUSE_README.md  RULE_BUNDLE.md  RULE_TABLE.md  action_clause.rs  audit_record.rs  bundle_crud.rs  execution_constraints.rs  hot_reload.rs  lib.rs  match_clause.rs  rule_bundle.rs  rule_metadata.rs  rule_table.rs
deployment/: .env.example  Makefile  (+8 more)
sdk/python/: README.md  publish.sh  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/fencio/: __init__.py  agent.py  vocabulary.py
sdk/python/tests/: test_agent_callback.py  test_agent_registration.py  test_client.py  test_enforcement_integration.py  test_grpc_connection.py  test_schema_alignment.py  test_soft_block.py  test_vocabulary_registry.py
sdk/python/tupl/: __init__.py  agent.py  buffer.py  client.py  data_plane_client.py  rule_client.py  types.py  vocabulary.py
(+233 files in other folders)
